--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,16 @@ before_install:
   - sed -e "s/^\\(127\\.0\\.0\\.1.*\\)/\\1 $(hostname | cut -c1-63)/" /etc/hosts | sudo tee /etc/hosts
   - cat /etc/hosts # optionally check the content *after*
 
+script:
+  - sbt clean coverage test
+
+after_success:
+  - sbt coverageReport coveralls
+
 language: scala
 
 scala:
-  - 2.12.4
+  - 2.12.5
 
 jdk:
   - oraclejdk8
